# OSLAB_2

./: CMakeLists.txt  OS-Lab2.cpp  OS-Lab2.sln  OS-Lab2.vcxproj  OS-Lab2.vcxproj.filters  ReadMe.txt  first_iteration_unit_tests.cpp  mmemory.h  stdafx.cpp
lib/: CMakeLists.txt  mmemory.c  mmemory.cpp  mmemory.h
test/: CMakeLists.txt  first_iteration_unit_tests.cpp
